Added fontawesome icons.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
         <div class="media">
           <div class="media-left padding-right-2">
             <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="icon icon-leaf" ></i>
+              <i class="fa fa-leaf" ></i>
             </div>
           </div>
           <div class="media-body">
@@ -40,7 +40,7 @@ layout: default
         <div class="media">
           <div class="media-left padding-right-2">
             <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="icon icon-search" ></i>
+              <i class="fa fa-search" ></i>
             </div>
           </div>
           <div class="media-body">
