--- a/programs.html
+++ b/programs.html
@@ -57,25 +57,11 @@ permalink: /programs/
   </div>
 </div>
 
-<div class="prose" style="background: #f5f5f5;">
+
+<div class="prose bg-gray">
   <div class="container" style="padding-top: 100px; padding-bottom: 100px;">
     <div class="row">
-      <div class="col-sm-12 text-center margin-bottom-4">
-        <h2 class="margin-bottom-4 margin-top-0">Programs</h2>
-      </div>
-
-      {% for program in site.programs limit:include.limit %}
-        <div class="col-sm-4 col-centered">
-          <div class="panel panel-default padding-4 text-center" style="min-height: 320px; margin-bottom: 2em;">
-            <div style="transform: scale(1.5); margin: 26px auto; width: 30px; height: 30px; padding: 2px; text-align: center; box-shadow: 0 0 0 2px #eee; border-radius: 50%;">
-              <i class="fa fa-book"></i>
-            </div>
-            <h4>{{ program.title }}</h4>
-            <a href="{{  program.url | prepend: site.baseurl }}"><i class="fa fa-link"></i></a>
-            <p>{{ program.excerpt | strip_html | truncatewords:35 }}</p>
-          </div>
-        </div>
-      {% endfor %}
+      {% include programs.html %}
     </div>
   </div>
 </div>
