--- a/programs.html
+++ b/programs.html
@@ -59,7 +59,7 @@ permalink: /programs/
 
 
 <div class="prose bg-gray">
-  <div class="container" style="padding-top: 100px; padding-bottom: 100px;">
+  <div class="container space-by-100">
     <div class="row">
       {% include programs.html %}
     </div>
@@ -67,8 +67,8 @@ permalink: /programs/
 </div>
 
 <!-- subscribe -->
-<div class="prose" style="background: #fff;">
-  <div class="container" style="padding-top: 25px; padding-bottom: 25px;">
+<div class="prose bg-white">
+  <div class="container space-by-100">
     <div class="row">
     </div>
   </div>
