Updated program verbiage.

--- a/programs.html
+++ b/programs.html
@@ -7,40 +7,29 @@ permalink: /programs/
 ---
 
 <div style="position: relative; background-image: url(/assets/images/programs/professional-mentorship.jpg); background-size: cover; background-position: center -50px; background-attachment: fixed;">
-  <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba(0, 180, 255, 0.73)"></div>
+  <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba(0, 0, 0, 0.53)"></div>
   <div style="padding: 100px 0; position: relative;">
     <div class="container text-center">
-      <h2 style="color: #fff; margin-top: 0;">First time here? Let us help you find your bearings.</h2>
+      <h2 style="color: #fff; margin-top: 0;">YEP Professional Mentorship Program</h2>
       <h4 style="color: #fff; font-weight: 400; opacity: .5;">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut mattis lacus.
+        We are determined to create a community with the strongest possible networking platform.
       </h4>
-      <a class="btn btn-lg btn-default" style="margin-top: 18px; border: 2px solid #fff;; color: #fff; background: transparent;">Get started</a>
+      <a class="btn btn-lg btn-default" style="margin-top: 18px; border: 2px solid #fff;; color: #fff; background: transparent;" href="http://yepnetworks.us11.list-manage.com/track/click?u=5d936b18dafd103ed356a89c6&id=ddcefd740d&e=e2a73a2fcc">Get started</a>
     </div>
   </div>
 </div>
 
-<div class="prose" style="background: #fff;">
+<div class="prose bg-white">
   <div class="container" style="padding-top: 50px; padding-bottom: 50px;">
     <div class="row">
       <div class="col-sm-12">
-          <h2 class="margin-top-0 margin-bottom-2">Lorem ipsum</h2>
+          <h2 class="margin-top-0 margin-bottom-2">Programs</h2>
       </div>
       <div class="col-sm-7">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut mattis lacus. Nam porttitor consectetur arcu, ut vehicula odio auctor eget. Praesent eget mattis mauris. Ut rhoncus diam ac congue viverra. Donec iaculis ligula tortor, at tristique turpis mattis id. Pellentesque bibendum, urna eu condimentum elementum, ex libero mollis mauris, vel mattis felis leo ut turpis. Maecenas tortor nisi, efficitur sed iaculis et, cursus facilisis turpis. Nullam efficitur enim et euismod porttitor. Nam sed tortor metus. Proin nec dui justo. Fusce id porta lectus, sit amet egestas lorem. Donec euismod at felis vel hendrerit. Vestibulum fermentum eget tellus eget ullamcorper. Maecenas ullamcorper mauris in viverra dictum. Donec aliquet nisi et viverra convallis. Etiam tempor eros magna, non suscipit justo commodo quis.</p>
+        <p>YEP was created in 2009 to fill the need for a broader platform for the Ethiopian diaspora across all professions to connect, share experiences and valuable resources and pursue community development initiatives. Since YEP came into existence, it has taken a number of steps to fill the gap that existed between aspiring mentors and young professionals, among professionals in different fields, and between professionals and new comers, the business society, and the larger Ethiopian community. YEP's programs are an integral part of this vision.</p>
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-4">
-        <div class="media">
-          <div class="media-left padding-right-2">
-            <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="fa fa-leaf" ></i>
-            </div>
-          </div>
-          <div class="media-body">
-            <div class="bold">Lorem ipsum</div>
-            <p class="text-muted">Vestibulum fermentum eget tellus eget ullamcorper. Maecenas ullamcorper mauris in viverra dictum. Donec aliquet nisi et viverra convallis.</p>
-          </div>
-        </div>
         <div class="media">
           <div class="media-left padding-right-2">
             <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
@@ -48,8 +37,8 @@ permalink: /programs/
             </div>
           </div>
           <div class="media-body">
-            <div class="bold">Praesent ut mattis</div>
-            <p class="text-muted">Vestibulum fermentum eget tellus eget ullamcorper.</p>
+            <div class="bold">Explore</div>
+            <p class="text-muted">Read about each of our programs below.</p>
           </div>
         </div>
       </div>
