Updated about us.

--- a/about.html
+++ b/about.html
@@ -6,6 +6,18 @@ group: navigation
 permalink: /about/
 ---
 
+<div style="position: relative; background-image: url(/assets/images/team.jpg); background-size: cover; background-position: center -70px; background-attachment: fixed;">
+  <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba(0, 0, 0, 0.53)"></div>
+  <div style="padding: 125px 0; position: relative;">
+    <div class="container text-center">
+      <h2 style="color: #fff; margin-top: 0;">Your Ethiopian Professionals</h2>
+      <h4 style="color: #fff; font-weight: 400; opacity: .5;">
+        We are determined to create a community with the strongest possible networking platform.
+      </h4>
+    </div>
+  </div>
+</div>
+
 <div class="prose" style="background: #fff;">
   <div class="container" style="padding-top: 50px; padding-bottom: 50px;">
     <div class="row">
