--- a/programs.html
+++ b/programs.html
@@ -6,21 +6,21 @@ group: navigation
 permalink: /programs/
 ---
 
-<div style="position: relative; background-image: url(/assets/images/programs/professional-mentorship.jpg); background-size: cover; background-position: center -50px; background-attachment: fixed;">
-  <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba(0, 0, 0, 0.53)"></div>
-  <div style="padding: 100px 0; position: relative;">
+<div class="hero-program">
+  <div class="hero-overlay"></div>
+  <div class="hero-content-wrapper">
     <div class="container text-center">
-      <h2 style="color: #fff; margin-top: 0;">YEP Professional Mentorship Program</h2>
-      <h4 style="color: #fff; font-weight: 400; opacity: .5;">
+      <h2>YEP Professional Mentorship Program</h2>
+      <h4>
         We are determined to create a community with the strongest possible networking platform.
       </h4>
-      <a class="btn btn-lg btn-default" style="margin-top: 18px; border: 2px solid #fff;; color: #fff; background: transparent;" href="http://yepnetworks.us11.list-manage.com/track/click?u=5d936b18dafd103ed356a89c6&id=ddcefd740d&e=e2a73a2fcc">Get started</a>
+      <a class="btn btn-lg btn-default btn-cta" href="http://yepnetworks.us11.list-manage.com/track/click?u=5d936b18dafd103ed356a89c6&id=ddcefd740d&e=e2a73a2fcc">Get started</a>
     </div>
   </div>
 </div>
 
 <div class="prose bg-white">
-  <div class="container" style="padding-top: 50px; padding-bottom: 50px;">
+  <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
           <h2 class="margin-top-0 margin-bottom-2">Programs</h2>
@@ -48,7 +48,7 @@ permalink: /programs/
 
 
 <div class="prose bg-gray">
-  <div class="container space-by-100">
+  <div class="container pad-by-100">
     <div class="row">
       {% include programs.html %}
     </div>
