Added founders profiles.

--- a/about.html
+++ b/about.html
@@ -4,51 +4,59 @@ title: About Us
 header: About Us
 group: navigation
 permalink: /about/
+body_class: about
 ---
 
-<div style="position: relative; background-image: url(/assets/images/team.jpg); background-size: cover; background-position: center -70px; background-attachment: fixed;">
-  <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba(0, 0, 0, 0.53)"></div>
-  <div style="padding: 125px 0; position: relative;">
+<div class="hero">
+  <div class="image-overlay"></div>
+  <div class="content-wrapper">
     <div class="container text-center">
-      <h2 style="color: #fff; margin-top: 0;">Your Ethiopian Professionals</h2>
-      <h4 style="color: #fff; font-weight: 400; opacity: .5;">
+      <h2>Your Ethiopian Professionals</h2>
+      <h4>
         We are determined to create a community with the strongest possible networking platform.
       </h4>
     </div>
   </div>
 </div>
 
-<div class="prose" style="background: #fff;">
-  <div class="container" style="padding-top: 50px; padding-bottom: 50px;">
+<div class="prose bg-white">
+  <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
         <h2 class="margin-top-0 margin-bottom-2">About Us</h2>
       </div>
       <div class="col-sm-7">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut mattis lacus. Nam porttitor consectetur arcu, ut vehicula odio auctor eget. Praesent eget mattis mauris. Ut rhoncus diam ac congue viverra. Donec iaculis ligula tortor, at tristique turpis mattis id. Pellentesque bibendum, urna eu condimentum elementum, ex libero mollis mauris, vel mattis felis leo ut turpis. Maecenas tortor nisi, efficitur sed iaculis et, cursus facilisis turpis. Nullam efficitur enim et euismod porttitor. Nam sed tortor metus. Proin nec dui justo. Fusce id porta lectus, sit amet egestas lorem. Donec euismod at felis vel hendrerit. Vestibulum fermentum eget tellus eget ullamcorper. Maecenas ullamcorper mauris in viverra dictum. Donec aliquet nisi et viverra convallis. Etiam tempor eros magna, non suscipit justo commodo quis.</p>
+        <p>
+          Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and
+          success to have a positive impact in the world.
+        </p>
+        <p>
+          YEP was created in 2009 to fill the need for a broader platform for the Ethiopian diaspora across all professions to connect,
+          share experiences and valuable resources and pursue community development initiatives.
+        </p>
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-4">
         <div class="media">
           <div class="media-left padding-right-2">
-            <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="fa fa-leaf" ></i>
+            <div class="media-icon-wrapper">
+              <i class="fa fa-leaf"></i>
             </div>
           </div>
           <div class="media-body">
-            <div class="bold">Lorem ipsum</div>
-            <p class="text-muted">Vestibulum fermentum eget tellus eget ullamcorper. Maecenas ullamcorper mauris in viverra dictum. Donec aliquet nisi et viverra convallis.</p>
+            <div class="bold">Our Mission</div>
+            <p class="text-muted">to inspire, educate and empower the Ethiopian professionals community to make a positive impact in the world</p>
           </div>
         </div>
         <div class="media">
           <div class="media-left padding-right-2">
-            <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="fa fa-search" ></i>
+            <div class="media-icon-wrapper">
+              <i class="fa fa-leaf"></i>
             </div>
           </div>
           <div class="media-body">
-            <div class="bold">Praesent ut mattis</div>
-            <p class="text-muted">Vestibulum fermentum eget tellus eget ullamcorper.</p>
+            <div class="bold">Our Vision</div>
+            <p class="text-muted">to conceive of a strong community that shares ideas, skills, and resources to enrich lives</p>
           </div>
         </div>
       </div>
@@ -56,22 +64,63 @@ permalink: /about/
   </div>
 </div>
 
-<div class="prose" style="background: #f5f5f5;">
-  <div class="container" style="padding-top: 100px; padding-bottom: 100px;">
+<div class="prose bg-gray">
+  <div class="container pad-by-100">
     <div class="row">
       <div class="col-sm-12 text-center margin-bottom-4">
-        <h2 class="margin-bottom-4 margin-top-0">Leadership</h2>
+        <h2 class="margin-bottom-4 margin-top-0">What We Do</h2>
+      </div>
+      <div class="col-sm-4">
+        <div class="panel panel-default padding-4 text-center">
+          <div class="panel-icon-wrapper">
+            <i class="fa fa-book"></i>
+          </div>
+          <h4>Networking Among Professionals</h4>
+          <p>YEP creates opportunities for Ethiopian professionals to meet, network, and share resources among fellow professionals
+            to succeed in their career and social endeavors. Moreover, YEP connects aspiring professionals with successful
+            mentors through the networking platform it has created.</p>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="panel panel-default padding-4 text-center">
+          <div class="panel-icon-wrapper">
+            <i class="fa fa-book"></i>
+          </div>
+          <h4>Supporting Newcomers</h4>
+          <p>YEP assists newcomers to the United States in their educational and career path by providing opportunities and
+            resources to build connections with YEP members.</p>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="panel panel-default padding-4 text-center">
+          <div class="panel-icon-wrapper">
+            <i class="fa fa-book"></i>
+          </div>
+          <h4>Engaging the Ethiopian Community</h4>
+          <p>YEP promotes collaborative opportunities to engage local Ethiopian community organizations, professional associations,
+            and the business community to give back and support.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="prose bg-gray">
+  <div class="container pad-by-50">
+    <div class="row">
+      <div class="col-sm-12 text-center margin-bottom-4">
+        <h2 class="margin-bottom-4 margin-top-0">Founders</h2>
       </div>
 
-      {% for program in site.leaders limit:include.limit %}
+      {% assign persons = site.people | where: "category", "founders" | sort: "last-name" %}
+      {% for person in persons %}
         <div class="col-sm-4 col-centered">
-          <div class="panel panel-default padding-4 text-center" style="min-height: 320px; margin-bottom: 2em;">
+          <div class="panel panel-default padding-4" style="min-height: 320px; margin-bottom: 2em;">
             <div style="transform: scale(1.5); margin: 26px auto; width: 30px; height: 30px; padding: 2px; text-align: center; box-shadow: 0 0 0 2px #eee; border-radius: 50%;">
-              <i class="fa fa-book"></i>
+              <i class="fa fa-rocket"></i>
             </div>
-            <h4>{{ program.title }}</h4>
-            <a href="{{  program.url | prepend: site.baseurl }}"><i class="fa fa-link"></i></a>
-            <p>{{ program.excerpt | strip_html | truncatewords:35 }}</p>
+            <h4 class="text-center">{{ person.title }}</h4>
+            <p>{{ person.excerpt | strip_html | truncatewords:400 }}</p>
           </div>
         </div>
       {% endfor %}
@@ -79,10 +128,16 @@ permalink: /about/
   </div>
 </div>
 
-<!-- subscribe -->
-<div class="prose" style="background: #fff;">
-  <div class="container" style="padding-top: 25px; padding-bottom: 25px;">
+<div class="prose bg-white">
+  <div class="container pad-by-50">
     <div class="row">
+      <div class="col-sm-12">
+        <h2 class="margin-top-0 margin-bottom-2">Our History</h2>
+      </div>
+      <div class="col-sm-12">
+        {% include history.html %}
+      </div>
     </div>
   </div>
 </div>
+
