--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ layout: default
 </div>
 
 <!-- latest -->
-<div class="prose" style="background: #f5f5f5;">
-  <div class="container" style="padding-top: 100px; padding-bottom: 100px;">
+<div class="prose bg-gray">
+  <div class="container pad-by-100">
     <div class="cards">
       <div class="row">
         <div class="col-sm-12 text-center margin-bottom-4">
