--- a/index.html
+++ b/index.html
@@ -95,32 +95,19 @@ layout: default
             </p>
           </div>
         </div>
+
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="card-item panel">
-            <h3>Our blogs</h3>
-            <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In leo
-            mauris, interdum et odio eu, bibendum varius odio. Nulla
-            facilisi. Morbi faucibus, dui vel suscipit facilisis, magna
-            libero tristique massa, eu fringilla sem odio id nisl. Nunc
-            varius malesuada metus. Suspendisse justo enim, finibus id sapien
-            eget, consectetur mollis metus. Morbi non vehicula sem. Mauris
-            gravida ante eros, sit amet sagittis est semper non. Integer
-            fringilla fringilla enim, et vulputate leo egestas non. Nunc ex
-            lectus, consequat ac accumsan at, aliquet eu odio. Mauris mi ex,
-            lacinia ac purus eu, molestie efficitur mi. Fusce non tortor
-            erat. Cras semper eros a nisi vulputate, id tincidunt lacus
-            condimentum. Aliquam vel odio risus.
-            </p>
+            <a class="twitter-timeline" data-width="300" data-height="300" href="https://twitter.com/YEPnetworks">Tweets by YEPnetworks</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="card-item panel">
-            <h3>Social Media</h3>
-            <a class="twitter-timeline" data-width="300" data-height="300" href="https://twitter.com/YEPnetworks">Tweets by YEPnetworks</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <div class="fb-page" data-href="https://www.facebook.com/YourEthiopianProfessionals/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/YourEthiopianProfessionals/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/YourEthiopianProfessionals/">Your Ethiopian Professionals Network - YEP</a></blockquote></div>
           </div>
         </div>
+
       </div>
     </div>
 
