Added events section; updated programs.

--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,7 @@ group: navigation
 permalink: /programs/
 ---
 
-<div class="hero-program">
+<div class="hero" style="background-image: url(/assets/images/programs/professional-mentorship.jpg)">
   <div class="hero-overlay"></div>
   <div class="hero-content-wrapper">
     <div class="container text-center">
