--- a/index.html
+++ b/index.html
@@ -1,71 +1,11 @@
 ---
 layout: default
+body_class: front
 ---
 
-<div style="position: relative; background-image: url(https://unsplash.imgix.net/photo-1415226581130-91cb7f52f078?fit=crop&fm=jpg&h=600&q=75&w=2000); background-size: cover; background-position: center -250px; background-attachment: fixed;">
-  <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba(250, 90, 0, 0.83)"></div>
-  <div style="padding: 100px 0; position: relative;">
-    <div class="container text-center">
-      <h2 style="color: #fff; margin-top: 0;">First time here? Let us help you find your bearings.</h2>
-      <h4 style="color: #fff; font-weight: 400; opacity: .5;">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut mattis lacus.
-      </h4>
-      <a class="btn btn-lg btn-default" style="margin-top: 18px; border: 2px solid #fff;; color: #fff; background: transparent;">Get started</a>
-    </div>
-  </div>
-</div>
+{% include slider.html %}
 
-<div class="prose" style="background: #fff;">
-  <div class="container" style="padding-top: 100px; padding-bottom: 100px;">
-    <div class="row">
-      <div class="col-sm-12">
-          <h2 class="margin-top-0 margin-bottom-2">Lorem ipsum</h2>
-      </div>
-      <div class="col-sm-7">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut mattis lacus. Nam porttitor consectetur arcu, ut vehicula odio auctor eget. Praesent eget mattis mauris. Ut rhoncus diam ac congue viverra. Donec iaculis ligula tortor, at tristique turpis mattis id. Pellentesque bibendum, urna eu condimentum elementum, ex libero mollis mauris, vel mattis felis leo ut turpis. Maecenas tortor nisi, efficitur sed iaculis et, cursus facilisis turpis. Nullam efficitur enim et euismod porttitor. Nam sed tortor metus. Proin nec dui justo. Fusce id porta lectus, sit amet egestas lorem. Donec euismod at felis vel hendrerit. Vestibulum fermentum eget tellus eget ullamcorper. Maecenas ullamcorper mauris in viverra dictum. Donec aliquet nisi et viverra convallis. Etiam tempor eros magna, non suscipit justo commodo quis.</p>
-      </div>
-      <div class="col-sm-1"></div>
-      <div class="col-sm-4">
-        <div class="media">
-          <div class="media-left padding-right-2">
-            <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="fa fa-leaf" ></i>
-            </div>
-          </div>
-          <div class="media-body">
-            <div class="bold">Lorem ipsum</div>
-            <p class="text-muted">Vestibulum fermentum eget tellus eget ullamcorper. Maecenas ullamcorper mauris in viverra dictum. Donec aliquet nisi et viverra convallis.</p>
-          </div>
-        </div>
-        <div class="media">
-          <div class="media-left padding-right-2">
-            <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="fa fa-search" ></i>
-            </div>
-          </div>
-          <div class="media-body">
-            <div class="bold">Praesent ut mattis</div>
-            <p class="text-muted">Vestibulum fermentum eget tellus eget ullamcorper.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- black-bg callout -->
-<div style="position: relative; background-image: url(https://images.unsplash.com/uploads/14120938606568dde6e2b/c9e42240?fit=crop&fm=jpg&h=400&q=80&w=2000); background-size: cover; background-position: center center;">
-  <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgba(20, 20, 20, 0.95)"></div>
-  <div style="padding: 100px 0; position: relative;">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 text-center">
-          <h2 style="font-weight: 300; color: #fff;" class="margin-top-0 margin-bottom-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut mattis lacus. </h2>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{% include callout.html %}
 
 <!-- latest -->
 <div class="prose bg-gray">
@@ -111,25 +51,5 @@ layout: default
       </div>
     </div>
 
-  </div>
-</div>
-
-<!-- subscribe -->
-<div class="prose" style="background: #fff;">
-  <div class="container" style="padding-top: 75px; padding-bottom: 75px;">
-    <div class="row">
-      <div class="col-sm-12 text-center">
-        <h2 class="margin-top-0">Want to learn more?</h2>
-        <p class="text-muted">Get emailed whenever there are updates.</p>
-      </div>
-      <div class="col-sm-6 col-sm-offset-3 margin-top-2">
-        <div class="input-group input-group-lg">
-          <input type="text" class="form-control" placeholder="Enter your email address">
-          <span class="input-group-btn">
-            <button class="btn btn-primary" type="button">Subscribe</button>
-          </span>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
