--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body_class: front
     <div class="cards">
       <div class="row">
         <div class="col-sm-12 text-center margin-bottom-4">
-          <h2 class="margin-bottom-4 margin-top-0">Latest</h2>
+          <h2 class="h1 section-head">Latest from YEP</h2>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-4">
