Updated hero sections.

--- a/about.html
+++ b/about.html
@@ -6,15 +6,11 @@ group: navigation
 permalink: /about/
 body_class: about
 ---
-
-<div class="hero">
-  <div class="image-overlay"></div>
-  <div class="content-wrapper">
+<div id="hero" style="background-image: url(/assets/images/team.jpg); /*background-position: center 0px*/;">
+  <div class="hero-overlay"></div>
+  <div class="hero-content-wrapper">
     <div class="container text-center">
-      <h2>Your Ethiopian Professionals</h2>
-      <h4>
-        We are determined to create a community with the strongest possible networking platform.
-      </h4>
+      <h2>About YEP</h2>
     </div>
   </div>
 </div>
