--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@ group: navigation
 permalink: /events/
 body_class: events
 ---
-<div class="hero" style="background-image: url(/assets/images/events/summer-gala-2015.jpg)">
+<div id="hero" style="background-image: url(/assets/images/events/summer-gala-2015.jpg); background-position: center 0px;">
   <div class="hero-overlay"></div>
   <div class="hero-content-wrapper">
     <div class="container text-center">
