--- a/programs.html
+++ b/programs.html
@@ -6,16 +6,11 @@ group: navigation
 permalink: /programs/
 body_class: programs
 ---
-
-<div class="hero" style="background-image: url(/assets/images/programs/professional-mentorship.jpg)">
+<div id="hero" style="background-image: url(/assets/images/programs/professional-mentorship.jpg); /*background-position: center 0px*/;">
   <div class="hero-overlay"></div>
   <div class="hero-content-wrapper">
     <div class="container text-center">
-      <h2>YEP Professional Mentorship Program</h2>
-      <h4>
-        We are determined to create a community with the strongest possible networking platform.
-      </h4>
-      <a class="btn btn-lg btn-default btn-cta" href="http://yepnetworks.us11.list-manage.com/track/click?u=5d936b18dafd103ed356a89c6&id=ddcefd740d&e=e2a73a2fcc">Get started</a>
+      <h2>YEP Programs</h2>
     </div>
   </div>
 </div>
