--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@ layout: default
 body_class: front
 ---
 
-{% include slider.html %}
+<div id="hero-front" style="width: 100%;/*background-position: center 0px*/;">
+  <div class="hero-content-wrapper">
+    <div class="item">
+      <img src="/assets/images/Canoe_Sacred_Headwaters-0x0.jpg" alt="">
+      <div class="hero-caption">
+        <div style="padding:15px; background: rgba(0, 0, 0, 0.6)">
+          <h3>The Future of Ethiopian Professionals</h3>
+          <p>Securing the skills necessary to build a community for the next generation of thinkers and leaders.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% include callout.html %}
 
