Updated twitter card height and hid chrome.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body_class: front
 
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="card-item panel">
-            <a class="twitter-timeline" data-width="300" data-height="300" href="https://twitter.com/YEPnetworks">Tweets by YEPnetworks</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" data-width="300" data-height="500" data-chrome="nofooter transparent" href="https://twitter.com/YEPnetworks">Tweets by YEPnetworks</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
 
