Updated event ref.

--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@ body_class: events
 <div class="bg-gray card-grid">
   <div class="container">
     <div class="row">
-      {% include event-cards.html %}
+      {% include events.html %}
     </div>
   </div>
 </div>
