Updated image references.

--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -1,7 +1,7 @@
 ---
 layout: program
 title: Career Development
-img: professional-development.jpeg
+img: career-development.jpg
 categories:
 - programs
 ---
