--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -1,7 +1,7 @@
 ---
 layout: program
 title: Diaspora and Community Engagement (DCE)
-img: professional-development.jpeg
+img: diaspora-engagement.jpg
 categories:
 - programs
 ---
