--- a/_programs/personal-professional-empowerment.html
+++ b/_programs/personal-professional-empowerment.html
@@ -1,7 +1,7 @@
 ---
 layout: program
 title: Personal and Professional Empowerment
-img: professional-development.jpeg
+img: personal-professional-empowerment.jpg
 categories:
 - programs
 ---
