--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -1,7 +1,7 @@
 ---
 layout: program
 title: Professional Mentorship
-img: professional-development.jpeg
+img: professional-mentorship.jpg
 categories:
 - programs
 ---
