--- a/_programs/recent-arrival.html
+++ b/_programs/recent-arrival.html
@@ -1,7 +1,7 @@
 ---
 layout: program
 title: Recent Arrival
-img: professional-development.jpeg
+img: recent-arrival.jpg
 categories:
 - programs
 ---
