Updated card wrapper for programs.

--- a/programs.html
+++ b/programs.html
@@ -1,5 +1,5 @@
 ---
-layout: page 
+layout: page
 title: Programs
 header: Programs
 group: navigation
@@ -15,46 +15,10 @@ body_class: programs
   </div>
 </div>
 
-<div class="prose bg-white">
-  <div class="container pad-by-50">
-    <div class="row">
-      <div class="col-sm-12">
-          <h2 class="margin-top-0 margin-bottom-2">Programs</h2>
-      </div>
-      <div class="col-sm-7">
-        <p>YEP was created in 2009 to fill the need for a broader platform for the Ethiopian diaspora across all professions to connect, share experiences and valuable resources and pursue community development initiatives. Since YEP came into existence, it has taken a number of steps to fill the gap that existed between aspiring mentors and young professionals, among professionals in different fields, and between professionals and new comers, the business society, and the larger Ethiopian community. YEP's programs are an integral part of this vision.</p>
-      </div>
-      <div class="col-sm-1"></div>
-      <div class="col-sm-4">
-        <div class="media">
-          <div class="media-left padding-right-2">
-            <div style="width: 30px; height: 30px; padding: 2px; text-align: center; background-color: #eee; border-radius: 50%;">
-              <i class="fa fa-search" ></i>
-            </div>
-          </div>
-          <div class="media-body">
-            <div class="bold">Explore</div>
-            <p class="text-muted">Read about each of our programs below.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="prose bg-gray">
+<div class="bg-gray card-grid">
   <div class="container pad-by-100">
     <div class="row">
       {% include programs.html %}
-    </div>
-  </div>
-</div>
-
-<!-- subscribe -->
-<div class="prose bg-white">
-  <div class="container space-by-100">
-    <div class="row">
     </div>
   </div>
 </div>
