Updated program frontmatter.

--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -2,13 +2,11 @@
 layout: program
 title: Career Development
 img: career-development.jpg
+manager: Vacant
+description: The Career Development Program provides a platform to help members in their career development journey, from finding and gaining employment through progressing towards individual career goals. YEP organizes various programs and events such as invited speakers series, panel discussions and virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and mock interview sessions where you can gain valuable individualized feedback.
 categories:
 - programs
 ---
-<p>
-The Career Development Program provides a platform to help members in their career development journey, from finding and gaining employment through progressing towards individual career goals. YEP organizes various programs and events such as invited speakers series, panel discussions and virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and mock interview sessions where you can gain valuable individualized feedback.
-</p>
-
 <p>
 If you are a job seeker, know of a job opening or have suggestions for the future events, we would love to hear from you!
 </p>
