--- a/_programs/personal-professional-empowerment.html
+++ b/_programs/personal-professional-empowerment.html
@@ -2,36 +2,40 @@
 layout: program
 title: Personal and Professional Empowerment
 img: personal-professional-empowerment.jpg
+manager: Vacant
+description: Personal and Professional Empowerment &nbsp;is about looking at who you are and becoming more aware of yourself as a unique individual. Personal empowerment involves developing the confidence and strength to set realistic goals and fulfil your potential.&nbsp;Everyone has strengths and weaknesses and a range of skills that are used in everyday situations, but all too often people remain unaware of, or undervalue, their true abilities.
 categories:
 - programs
 ---
-<p>Personal and Professional Empowerment &nbsp;is about looking at who you are and becoming more aware of yourself as a unique individual. Personal empowerment involves developing the confidence and strength to set realistic goals and fulfil your potential.&nbsp;Everyone has strengths and weaknesses and a range of skills that are used in everyday situations, but all too often people remain unaware of, or undervalue, their true abilities.</p>
-
-<ol start="1" type="1">
-	<li>Communication -&nbsp;The ability to communicate effectively with superiors, colleagues, and family/friends is essential. This workshop will work on augmenting the skills that are needed to excel in communications.&nbsp;
-	<ul type="disc">
-		<li>Listening: Being a good listener is an essential component of being a good communicator.&nbsp;</li>
-		<li>Verbal and nonverbal (written and body language)</li>
-		<li>Picking the right medium/audience</li>
-		<li>Clarity and concision</li>
-		<li>Feedback and Open mindedness</li>
-		<li>Respect and Empathy</li>
-	</ul>
-	</li>
-	<li>Assertiveness – (Valuing yourself and your rights, identifying needs and wants and ask for them to be mate, etc,..)
-	<ul type="disc">
-		<li>Passive</li>
-		<li>Aggressive</li>
-		<li>Assertive</li>
-	</ul>
-	</li>
-	<li>Time Management/Prioritization
-	<ul type="disc">
-		<li>Goal setting</li>
-		<li>Prioritization</li>
-		<li>Self-Awareness / self-motivation</li>
-		<li>Focus, etc,..</li>
-	</ul>
-	</li>
-	<li>Leadership - Place holder.&nbsp; All the above sessions will have workshops and speaker.&nbsp;&nbsp;Hence, for now, I would like to hold this even as a place holder till the events are outlined and time has been located to make sure these sessions are being conducted efficiently&nbsp;</li>
-</ol>
+<div class="container">
+	<h3>Guide</h3>
+	
+	<ol start="1" type="1">
+		<li>Communication -&nbsp;The ability to communicate effectively with superiors, colleagues, and family/friends is essential. This workshop will work on augmenting the skills that are needed to excel in communications.&nbsp;
+		<ul type="disc">
+			<li>Listening: Being a good listener is an essential component of being a good communicator.&nbsp;</li>
+			<li>Verbal and nonverbal (written and body language)</li>
+			<li>Picking the right medium/audience</li>
+			<li>Clarity and concision</li>
+			<li>Feedback and Open mindedness</li>
+			<li>Respect and Empathy</li>
+		</ul>
+		</li>
+		<li>Assertiveness – (Valuing yourself and your rights, identifying needs and wants and ask for them to be mate, etc,..)
+		<ul type="disc">
+			<li>Passive</li>
+			<li>Aggressive</li>
+			<li>Assertive</li>
+		</ul>
+		</li>
+		<li>Time Management/Prioritization
+		<ul type="disc">
+			<li>Goal setting</li>
+			<li>Prioritization</li>
+			<li>Self-Awareness / self-motivation</li>
+			<li>Focus, etc,..</li>
+		</ul>
+		</li>
+		<li>Leadership - Place holder.&nbsp; All the above sessions will have workshops and speaker.&nbsp;&nbsp;Hence, for now, I would like to hold this even as a place holder till the events are outlined and time has been located to make sure these sessions are being conducted efficiently&nbsp;</li>
+	</ol>
+</div>
