--- a/_programs/professional-mentorship.html
+++ b/_programs/professional-mentorship.html
@@ -2,6 +2,8 @@
 layout: program
 title: Professional Mentorship
 img: professional-mentorship.jpg
+manager: Vacant
+description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt dapibus sapien eu finibus. Cras accumsan consequat ultrices. Suspendisse bibendum at eros vitae suscipit. In elit lacus, commodo vitae eleifend quis, eleifend et justo. Donec semper iaculis auctor. Suspendisse non purus enim. Aliquam erat volutpat. Vestibulum sit amet dolor vulputate, aliquam mauris sit amet, tempor mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rhoncus hendrerit turpis vel rhoncus. Donec vulputate vitae nisi eu rutrum.
 categories:
 - programs
 ---
