--- a/index.html
+++ b/index.html
@@ -31,20 +31,13 @@ body_class: front
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="card-item panel">
             <h3>News Media</h3>
-            <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In leo
-            mauris, interdum et odio eu, bibendum varius odio. Nulla
-            facilisi. Morbi faucibus, dui vel suscipit facilisis, magna
-            libero tristique massa, eu fringilla sem odio id nisl. Nunc
-            varius malesuada metus. Suspendisse justo enim, finibus id sapien
-            eget, consectetur mollis metus. Morbi non vehicula sem. Mauris
-            gravida ante eros, sit amet sagittis est semper non. Integer
-            fringilla fringilla enim, et vulputate leo egestas non. Nunc ex
-            lectus, consequat ac accumsan at, aliquet eu odio. Mauris mi ex,
-            lacinia ac purus eu, molestie efficitur mi. Fusce non tortor
-            erat. Cras semper eros a nisi vulputate, id tincidunt lacus
-            condimentum. Aliquam vel odio risus.
-            </p>
+              {% assign items = site.data.news %}
+              {% for item in items %}
+                <div class="">
+                  <h5 style="font-weight:bold">{{ item.title }}</h5>
+                  <p style="font-size:12px">{{ item.desc }}</p>
+                </div>
+              {% endfor %}
           </div>
         </div>
 
