Updated banner image style.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ group: navigation
 permalink: /about/
 body_class: about
 ---
-<div id="hero" style="background-image: url(/assets/images/team.jpg); /*background-position: center 0px*/;">
+<div id="hero" style="background-image: url(/assets/images/team.jpg); background-position: center 50px;">
   <div class="hero-overlay"></div>
   <div class="hero-content-wrapper">
     <div class="container text-center">
